--- a/repositorio 1/index.html
+++ b/repositorio 1/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>hola. !sigue adelante esforzandote...</h1>
+    <h2>levantate,suspira,sonrie y sigue adelante...</h2>
+
 </body>
 </html>
